<resources>
    <string name="app_name">Pendataan Anggota</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="date_picker_dialog_title">Tangggal Lahir</string>
    <string name="date_time_done">DONE</string>
    <string name="clear">CLEAR</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string name="nama">Nama</string>
    <string name="nrp">NRP</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="matra">Matra</string>
    <string name="email">Email</string>
    <string name="daftar">Daftar</string>
    <string name="cek_account">Cek Account</string>
    <string name="tanggal">Tanggal Lahir</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="password">Password</string>
    <string name="verif_password">Verifikasi Password</string>


</resources>
