<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#99EC534E"
    tools:context="id.mil.tni.android.pendataananggota.activity.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/mabes_tni_logo"
                    tools:ignore="ContentDescription"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <!--<TextView
                    android:text="Untuk pendaftaran, Silahkan isi form di bawah ini :"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />-->


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginTop="@dimen/padding"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/et_nrp"
                            android:hint="@string/nrp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:textSize="18sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/btn_cek_nrp"
                        android:text="Cek NRP"
                        android:padding="@dimen/padding_double"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/btn_reactangle_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_ket_nrp"
                    android:text="*Silahkan cek NRP, sebelum melanjutkan"
                    android:layout_marginLeft="4dp"
                    android:textSize="12sp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_nama"
                        android:textAllCaps="true"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/nama"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:text="Tanggal Lahir (ex: 31/02/1995)"
                    android:textColor="#644343"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginLeft="3dp"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_tgllahir_hari"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/tanggal"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="/"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/et_tgllahir_bulan"
                        android:inputType="number"
                        android:maxLength="2"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/bulan"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="/"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/et_tgllahir_tahun"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:hint="@string/tahun"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Matra"
                        android:textColor="#644343"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginLeft="3dp"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/sp_matra"
                        android:layout_marginLeft="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>





                <android.support.design.widget.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_verif_password"
                        android:hint="@string/verif_password"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>



                <LinearLayout
                    android:id="@+id/lv_daftar"
                    android:background="@drawable/btn_reactangle_white"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAllCaps="true"
                        android:text="@string/daftar"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="#FF6464"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_daftar"
                    android:text="Sudah punya akun ? silahkan login."
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>